[#113331007] fix ipad custom field alignment

--- a/src/modules/booking/css/bookingAdmin.scss
+++ b/src/modules/booking/css/bookingAdmin.scss
@@ -296,6 +296,7 @@
                         }
                         &.is-required{
                             width: 40%;
+                            text-align: right;
                         }
                         &.is-active{
                             width: 30%;
